--- a/views/contact.slim
+++ b/views/contact.slim
@@ -2,5 +2,5 @@
   .col-md-offset-3.col-md-6
     .well.text-center
       | If you have any questions or comments about the rules, the website, or the game as a whole, please email us at 
-      a(href='mailto:cmu.assassins.help@gmail.com') cmu.assassins.help@gmail.com
+      a(href='mailto:reshef.elisha@gmail.com') reshef.elisha@gmail.com
       | .
