--- a/views/leaderboard.slim
+++ b/views/leaderboard.slim
@@ -6,14 +6,14 @@
           tr
             th(data-defaultsort='desc') Assassinations
             th Player Name
-            th Program
+            /!th Program
             th Still Alive?
         tbody
           - Assassins::Player.all(:is_verified => true).each do |player|
             tr
               td = player.kills
               td = player.name
-              td = player.program.title
+              /!td = player.program.title
               - if player.is_alive
                 td(data-value="true")
                   span.label.label-default
