--- a/views/layout.slim
+++ b/views/layout.slim
@@ -49,7 +49,7 @@ html
                       .input-group
                         span.input-group-addon
                           i.glyphicon.glyphicon-user
-                        input.form-control(type='text' name='andrew_id' placeholder='Andrew ID')
+                        input.form-control(type='text' name='andrew_id' placeholder='E-mail')
                     .form-group
                       .input-group
                         span.input-group-addon
