--- a/views/login.slim
+++ b/views/login.slim
@@ -1,9 +1,9 @@
 form.form-horizontal(action=url('/login') method='post')
   legend Log In
   .form-group
-    label.control-label.col-sm-2(for='andrew_id') Andrew ID
+    label.control-label.col-sm-2(for='andrew_id') E-mail
     .col-sm-10
-      input.form-control#andrew_id(name='andrew_id' type='text' placeholder='acarnegie' required=true)
+      input.form-control#andrew_id(name='andrew_id' type='text' placeholder='email@example.com' required=true)
   .form-group
     label.control-label.col-sm-2(for='secret') Secret Words
     .col-sm-10
