--- a/views/resend_verification.slim
+++ b/views/resend_verification.slim
@@ -1,11 +1,11 @@
-p If you did not receive your verification email, please enter your Andrew ID below to have a new one sent.
+p If you did not receive your verification email, please enter your 4 Digit ID below to have a new one sent.
 
 form.form-horizontal(action=url('/signup/resend_verification') method='post')
   legend Resend Verification Email
   .form-group
-    label.control-label.col-sm-2(for='andrew_id') Andrew ID
+    label.control-label.col-sm-2(for='andrew_id') E-mail
     .col-sm-10
-      input.form-control#andrew_id(name='andrew_id' type='text' placeholder='acarnegie' required=true)
+      input.form-control#andrew_id(name='andrew_id' type='text' placeholder='email@example.com' required=true)
   .form-group
     .col-sm-10.col-sm-offset-2
       button.btn.btn-primary(type='submit') Resend Verification
