--- a/views/signup.slim
+++ b/views/signup.slim
@@ -5,9 +5,9 @@ form.form-horizontal(action=url('/signup') method='post' role='role')
     .col-sm-10
       input.form-control#name(name='name' type='text' placeholder='Eugene Chang' required=true)
   .form-group
-    label.control-label.col-sm-2(for='andrew_id') 4 Digit ID
+    label.control-label.col-sm-2(for='andrew_id') E-mail
     .col-sm-10
-      input.form-control#andrew_id(name='andrew_id' type='text' placeholder='9999' required=true)
+      input.form-control#andrew_id(name='andrew_id' type='text' placeholder='email@example.com' required=true)
   .form-group
     label.control-label.col-sm-2(for='floor') TA
     .col-sm-10
