--- a/views/index.slim
+++ b/views/index.slim
@@ -2,7 +2,7 @@
   .row
     .col-md-12
       .alert.alert-warning
-        | If you never received a verification email, please enter your 4 Digit ID on <a href="#{url('/signup/resend_verification')}">this page</a> to have a new one sent.
+        | If you never received a verification email, please enter your e-mail on <a href="#{url('/signup/resend_verification')}">this page</a> to have a new one sent.
   .row
     .center#count-down
 - elsif game_state == :postgame
@@ -15,8 +15,8 @@
     .col-md-6
       img.img-responsive src='logo.png'
       img.img-responsive.hidden-phone src='skull.png' alt="You won't see it coming"
-    .col-md-6
-      == slim :signup, :locals => {:programs => {}}, :layout => false
+    /!.col-md-6
+      /!== slim :signup, :locals => {:programs => {}}, :layout => false
   - else
     .col-md-6
       img.img-responsive src='logo.png'
