--- a/views/index.slim
+++ b/views/index.slim
@@ -15,8 +15,8 @@
     .col-md-6
       img.img-responsive src='logo.png'
       img.img-responsive.hidden-phone src='skull.png' alt="You won't see it coming"
-    /!.col-md-6
-      /!== slim :signup, :locals => {:programs => {}}, :layout => false
+    .col-md-6
+      == slim :signup, :layout => false /!, :locals => {:programs => {}}
   - else
     .col-md-6
       img.img-responsive src='logo.png'
