screw this, taking that line out
dont give me syntax errors in a sodding comment -_-

--- a/views/index.slim
+++ b/views/index.slim
@@ -16,7 +16,7 @@
       /!img.img-responsive src='logo.png'
       img.img-responsive.hidden-phone src='skull.png' alt="You won't see it coming"
     .col-md-6
-      == slim :signup, :layout => false /!:locals => {:programs => {}}
+      == slim :signup, :layout => false
   - else
     .col-md-6
       img.img-responsive src='logo.png'
