goddamn this thing is annoying. No signups for you.

--- a/views/index.slim
+++ b/views/index.slim
@@ -13,10 +13,10 @@
 .row
   - if @player.nil? && game_state == :pregame
     .col-md-6
-      /!img.img-responsive src='logo.png'
+      img.img-responsive src='logo.png'
       img.img-responsive.hidden-phone src='skull.png' alt="You won't see it coming"
     .col-md-6
-      == slim :signup, :layout => false
+      /!== slim :signup, :locals => {:programs => {}}, :layout => false
   - else
     .col-md-6
       img.img-responsive src='logo.png'
