--- a/views/resend_verification.slim
+++ b/views/resend_verification.slim
@@ -1,4 +1,4 @@
-p If you did not receive your verification email, please enter your 4 Digit ID below to have a new one sent.
+p If you did not receive your verification email, please enter your email below to have a new one sent.
 
 form.form-horizontal(action=url('/signup/resend_verification') method='post')
   legend Resend Verification Email
