--- a/views/dashboard.slim
+++ b/views/dashboard.slim
@@ -17,7 +17,7 @@
         h4 = @player.target.name
         p.user-info
           .floor 
-            strong TA: 
+            strong TAs: 
             = @player.target.floor.description
           .confirm
           br
