did i remove all of it
who knows

--- a/views/signup.slim
+++ b/views/signup.slim
@@ -3,7 +3,7 @@ form.form-horizontal(action=url('/signup') method='post' role='role')
   .form-group
     label.control-label.col-sm-2(for='name') Full Name
     .col-sm-10
-      input.form-control#name(name='name' type='text' placeholder='Eugene Chang' required=true)
+      input.form-control#name(name='name' type='text' placeholder='First Last' required=true)
   .form-group
     label.control-label.col-sm-2(for='andrew_id') E-mail
     .col-sm-10
