Changed the Resnik Alert

--- a/views/rules.slim
+++ b/views/rules.slim
@@ -2,7 +2,7 @@
   .col-md-12
     .well
       h1 Rules
-      .alert.alert-warning IMPORTANT: The only on-campus dining facility from which you can take spoons is <strong>Resnik</strong>. Please do not take spoons from The Underground or any other on-campus dining facility. If you need to take a spoon from Resnik, pleace take only <strong>one</strong>. Buying spoons <em>is</em> allowed, and has the added benefit of stimulating the local economy!
+      .alert.alert-warning IMPORTANT: Please don't bring the water guns to NHS. It will get the game shut down. You don't want to be responsible for that.
       ol
         li After the game begins, you will be assigned a target, and someone else will be assigned you as their target.
         li To assassinate your target, you must tag them with [Whatever we'll be using].
