--- a/views/rules.slim
+++ b/views/rules.slim
@@ -6,7 +6,9 @@
       ol
         li After the game begins, you will be assigned a target, and someone else will be assigned you as their target.
         li To assassinate your target, tag them with a water gun or silly string.
-        li If you make a valid tag on your assassin, your assassin is stunned for 3 hours and cannot tag you during that time.
+		li If you are hit, you must give your assassin your two secret words.
+		li Once an assassin has their target's secret words, the assassin can input them in the Dashboard and get their target's target.
+        li If you make a valid tag on your assassin, your assassin is stunned for 3 hours and cannot tag you during that time, this lets you run away.
         li While your assassin is stunned, they cannot be re-stunned until their stun expires.
         li If you do not assassinate your target after 7 days, you will be eliminated due to inactivity. Your assassin will not receive extra time to assassinate their target.
         li When you are assassinated, your assassin is given your target.
