--- a/views/rules.slim
+++ b/views/rules.slim
@@ -4,19 +4,7 @@
       h1 Rules
       .alert.alert-warning IMPORTANT: Please don't bring the water guns to NHS. It will get the game shut down. You don't want to be responsible for that.
       ol
-        li After the game begins, you will be assigned a target, and someone else will be assigned you as their target.
-        li To assassinate your target, tag them with a water gun or silly string.
-		li If you are hit, you must give your assassin your two secret words.
-		li Once an assassin has their target's secret words, the assassin can input them in the Dashboard and get their target's target.
-        li If you make a valid tag on your assassin, your assassin is stunned for 3 hours and cannot tag you during that time, this lets you run away.
-        li While your assassin is stunned, they cannot be re-stunned until their stun expires.
-        li If you do not assassinate your target after 7 days, you will be eliminated due to inactivity. Your assassin will not receive extra time to assassinate their target.
-        li When you are assassinated, your assassin is given your target.
-        li A "safe zone" is a place where you cannot tag or stun another player, and no other player can tag or stun you.
-        li Don't tag people, in NHS, it'll get the game shut down. Don't bring guns into NHS either.
-		li Don't tag people if they're at work or on their way to work (they don't want to show up wet). Coming out of work is fine though.
-		li Don't tag people at the gym. It's dangerous.
-		li Don't tag people at Church, Synaguogue, Temple, or other religious institutions.
+        li NO RULEZ FREE FOR ALL FUCK DA POLICE!
 		
 
       span
