Changed the Rules

--- a/views/rules.slim
+++ b/views/rules.slim
@@ -2,9 +2,19 @@
   .col-md-12
     .well
       h1 Rules
-      .alert.alert-warning IMPORTANT: Please don't bring the water guns to NHS. It will get the game shut down. You don't want to be responsible for that.
+      .alert.alert-warning IMPORTANT: The price is $1 per person. If you do not pay by the time the game starts (Monday at midnight) you're out of the game.
       ol
         li NO RULEZ FREE FOR ALL FUCK DA POLICE!
+		li We’re going to be playing with water. If your assassin gets you wet with water, then you are OUT and you must tell your assassin who you were assigned to kill. This is not limited to water guns: it is okay to kill someone using water bottles, throwing waterballoons, using a hose, etc.
+		li There are certain places you CANNOT kill your assassin. These places include:
+		ul
+			li ANYWHERE on campus including parking lot + fields (even before and after school because you might get in trouble for bringing water guns to school) but once a person leaves Northwood campus, it's fair game 
+			li ANY SCHOOL EVENTS like dances, sports games at Northwood AND at different high schools, concerts are off limits
+			li AT WORK. You cannot kill your target while they are at work or on their way TO work. You may kill once they are coming OUT of work.
+			li AT THE GYM OR ORGANIZED SPORTS STUDIOS. everyone should be allowed to work out/practice/dance, etc. for club sports in peace then it's on your own once you step outside 
+			li ANY RELIGIOUS INSTITUTIONS. this is self explanatory 
+		li If you get water on your ASSASSIN before he or she is able to get you, then your assassin is STUNNED FOR AN HOUR. this means that they cannot kill you for a one hour period.
+		li BE HONEST & BE SAFE! this is all for fun, don’t forget.
 		
 
       span
