--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,11 +1,11 @@
 doctype html
 html
   head
-    title NHS Senior Assassins - #{title}
+    title Voyagers Assassins - #{title}
     meta charset='utf-8'
     meta name='viewport' content='width=device-width, initial-scale=1.0'
-    meta name='description' content='The central server for NHS Assassins'
-    meta name='keywords' content='NHS Spoon Assassins Pre-college'
+    meta name='description' content='The central server for Voyagers Assassins'
+    meta name='keywords' content='Voyagers Assassins'
     meta name='author' content='lezed1, tchebb, Shef-'
 
     link rel='icon' type='image/png' href=url('/favicon.png')
@@ -29,7 +29,7 @@ html
             span.icon-bar
             span.icon-bar
 
-          a.navbar-brand(href=url('/')) NHS Assassins
+          a.navbar-brand(href=url('/')) Voyagers Assassins
 
         .collapse.navbar-collapse#navbar-collapse
           == render_navigation
